# PyShEx

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  Dockerfile  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml  pr-test.yaml  pypi-publish.yaml
ancilliary/: earlreport.py
docker/: Dockerfile
notebooks/: BP_example_02.ipynb  CLI.ipynb  PersistentResults.ipynb  PrefixLib.ipynb  SPARQLEndpoints.ipynb  Schema_org.ipynb  SpecifyingStartShape.ipynb  WikiSlurper.ipynb  bloodpressure_example.ipynb  book_small.ipynb  book_small_text.ipynb  inconsistent_test.ipynb  school_example.ipynb  schoolbook_graph.ipynb  shex_example.ipynb  simple_shex.ipynb  test.ipynb  test_shexjsg.ipynb
pyshex/: __init__.py  evaluate.py  git_describe.txt  prefixlib.py  shex_evaluator.py  user_agent.py
pyshex/parse_tree/: parse_node.py
pyshex/shape_expressions_language/: p3_terminology.py  p5_2_validation_definition.py  p5_3_shape_expressions.py  p5_4_node_constraints.py  p5_5_shapes_and_triple_expressions.py  p5_6_schema_requirements.py  p5_7_semantic_actions.py  p5_context.py
pyshex/shapemap_structure_and_language/: p1_notation_and_terminology.py  p3_shapemap_structure.py  p4_shapemap_usage.py
pyshex/shex_manifest/: manifest.py
pyshex/sparql11_query/: p17_1_operand_data_types.py
pyshex/utils/: collection_utils.py  datatype_utils.py  debug_utils.py  deprecated.py  matchesEachOfEvaluator.py  n3_mapper.py  partitions.py  rdf_namespace.py  reference_utils.py  schema_loader.py  schema_utils.py  slurp_utils.py  sparql_query.py  stringtoken.py  tortoise.py  trace_utils.py  url_utils.py  value_set_utils.py
scripts/: evaluate.py
tests/: __init__.py
tests/data/: earl_report.ttl  patient-example-d.ttl  patient.shex  t1.shex  t1.sparql
tests/manifest_parser/: __init__.py  manifest.jsg
tests/test_biolink/: test_biolink_items.py
tests/test_cli/: clitests.py  test_evaluate.py  test_sparql_options.py
tests/test_collection_support/: test_collections.py
tests/test_issues/: gen_wikidata_test_data.py  test_andra_loop.py  test_bp_issue.py  test_comment_issue.py  test_crlf.py  test_diseases.py  test_fhir.py  test_guardian_issue.py  test_ill_founded.py  test_issue_11.py  test_issue_20.py  test_issue_21.py  test_issue_23.py  test_issue_25.py  (+18 more)
(+157 files in other folders)
