[metadata]
name = PyShEx
url = https://github.com/hsolbrig/PyShEx
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = Python ShEx Implementation
license = Apache 2.0
python-requires = >=3.6
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Compilers
    License :: Apache 2.0
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    ShEx
    rdf

[files]
packages =
    pyshex

[entry_points]
console_scripts =
    shexeval = pyshex.shex_evaluator:evaluate_cli
