[metadata]
name = PyShEx
url = https://github.com/hsolbrig/PyShEx
description = Python ShEx interpreter
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = Python ShEx Implementation
license = CC0 1.0 Universal
python-requires = >=3.6
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Software Development :: Compilers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords =
    ShEx
    rdf

[files]
packages =
    pyshex

[entry_points]
console_scripts =
    shexeval = pyshex.shex_evaluator:evaluate_cli

